--- a/src/components/navMobile/style.css
+++ b/src/components/navMobile/style.css
@@ -37,7 +37,7 @@
   line-height: 1.75rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .nav-mobile {
     display: block;
   }
