--- a/src/layouts/header/style.css
+++ b/src/layouts/header/style.css
@@ -41,7 +41,7 @@
   justify-self: end;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .header {
     padding: 1rem;
   }
